--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 
 <!doctype html><html lang="ja"><head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — AI学習防止ポートフォリオ</title>
+<title>Safolio — AI学習から守るイラストポートフォリオ</title>
 <link rel="stylesheet" href="styles.css">
 </head><body>
-
 <header class="header">
   <div class="container inner">
     <div class="brand">
@@ -18,8 +17,7 @@
       <a href="faq.html">FAQ</a>
     </nav>
     <div>
-      <a class="btn ghost" href="process.html">デモを見る</a>
-      <a class="btn primary" href="process.html">無料で始める</a>
+      <a class="btn primary" href="portfolio.html">ポートフォリオを見る</a>
     </div>
   </div>
 </header>
@@ -27,34 +25,21 @@
 <main class="container">
   <section class="hero">
     <div>
-      <div class="badge">新機能：SNS安全書き出し</div>
-      <h1>AIに学習されない。<br>見せたい人だけに、魅せる。</h1>
-      <p class="small">イラストレーターのための学習防止加工と、案件につながるポートフォリオをワンストップで。</p>
+      <h1>Safolio（サフォリオ）<br>AI学習から守るイラストポートフォリオ</h1>
+      <p class="small">Safolioは、あなたのイラストを無断AI学習から守る理念を持ったポートフォリオ公開サービスです。</p>
       <div style="display:flex; gap:12px; margin-top:14px;">
-        <a class="btn primary" href="process.html">無料で始める</a>
-        <a class="btn ghost" href="process.html">加工デモを見る</a>
+        <a class="btn primary" href="portfolio.html">ポートフォリオを見る</a>
+        <a class="btn ghost" href="faq.html">理念とFAQ</a>
       </div>
     </div>
     <div class="card">
       <img class="preview-img" src="assets/preview_processed_medium.png" alt="hero">
     </div>
   </section>
-
-  <section>
-    <h2 class="section-title">主な特徴</h2>
-    <div class="grid-3">
-      <div class="card"><strong>自動学習防止加工</strong><p class="small">見た目の変化最小限で、モデル学習耐性を向上。</p></div>
-      <div class="card"><strong>SNS安全書き出し</strong><p class="small">X / Instagram / Pixiv向けに最適化。</p></div>
-      <div class="card"><strong>限定公開リンク</strong><p class="small">ワンタイムURLやパスワードで安全に共有。</p></div>
-    </div>
-  </section>
 </main>
 
 <footer class="footer">
-  <div class="container">
-    © 2025 Safolio — 学習防止加工 / 利用規約 / プライバシー
-  </div>
+  <div class="container">© 2025 Safolio. All Rights Reserved.</div>
 </footer>
-
 <script src="script.js"></script>
 </body></html>
