--- a/faq.html
+++ b/faq.html
@@ -24,6 +24,7 @@
       <a href="process.html">加工</a>
       <a href="portfolio.html">ポートフォリオ</a>
       <a href="faq.html">FAQ</a>
+      <a href="contact.html">お問い合わせ</a>
     </nav>
     <div>
       <a class="btn ghost" href="process.html">デモを見る</a>
