--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 
-<!doctype html><html lang="ja"><head>
+<!doctype html><html lang="ja">\1
+<meta name="robots" content="index,follow,noai,noimageai">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="icon" href="data:,">
+
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Safolio — AI学習から守るイラストポートフォリオ</title>
 <link rel="stylesheet" href="styles.css">
@@ -15,6 +19,7 @@
       <a href="process.html">加工</a>
       <a href="portfolio.html">ポートフォリオ</a>
       <a href="faq.html">FAQ</a>
+      <a href="contact.html">お問い合わせ</a>
     </nav>
     <div>
       <a class="btn primary" href="portfolio.html">ポートフォリオを見る</a>
