--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,13 @@
 
-<!doctype html><html lang="ja"><head>
+<!doctype html><html lang="ja">\1
+<meta name="robots" content="index,follow,noai,noimageai">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="icon" href="data:,">
+
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Safolio — ポートフォリオ</title>
 <link rel="stylesheet" href="styles.css">
-</head><body>
+</head><body oncontextmenu="return false;">
 
 <header class="header">
   <div class="container inner">
@@ -16,6 +20,7 @@
       <a href="process.html">加工</a>
       <a href="portfolio.html">ポートフォリオ</a>
       <a href="faq.html">FAQ</a>
+      <a href="contact.html">お問い合わせ</a>
     </nav>
     <div>
       <a class="btn ghost" href="process.html">デモを見る</a>
@@ -37,7 +42,7 @@
   </section>
 
   <section style="margin-top:18px">
-    <div class="gallery">
+    <div class="gallery" ondragstart="return false;">
       <div class="tile"><img src="assets/work_1.png" alt="w1"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_8.png" alt="w8"><div class="shield">学習防止</div></div><div class="tile"><img src="assets/work_9.png" alt="w9"><div class="shield">学習防止</div></div>
     </div>
   </section>
@@ -50,6 +55,7 @@
       <img src="assets/work_1.png" style="width:100%;border-radius:8px;border:1px solid #eee">
       <p class="small">ダウンロードは制限されています。限定公開リンクを発行してください。</p>
       <div style="display:flex;gap:10px">
+        <a class="btn" href="#" id="shareBtn">限定公開リンクを生成</a>
         <a class="btn" href="#">限定公開リンク</a>
         <a class="btn primary" href="#">依頼する</a>
       </div>
