--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 <script>
 function sendMail(e){
   e.preventDefault();
-  const to = 'ckonsaru@gmail.com'; // 差し替え推奨
+  const to = 'contact@example.com'; // 差し替え推奨
   const subject = encodeURIComponent('[Safolio 問い合わせ] ' + document.getElementById('name').value);
   const body = encodeURIComponent(
     'お名前: ' + document.getElementById('name').value + '\n' +
