--- a/portfolio.html
+++ b/portfolio.html
@@ -53,30 +53,30 @@
       <button class="btn" data-filter="小物" type="button">小物</button>
     </div>
     <div class="gallery" id="gallery" ondragstart="return false;">
-      <div class="tile" data-tag="キャラ"><img src="assets/work_1.png" alt="w1"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-tag="小物"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-tag="小物"><img src="assets/work_8.png" alt="w8"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_9.png" alt="w9"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_10.png" alt="w10"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_11.png" alt="w11"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_12.png" alt="w12"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-tag="小物"><img src="assets/work_13.png" alt="w13"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_14.png" alt="w14"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_15.png" alt="w15"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_16.png" alt="w16"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-tag="小物"><img src="assets/work_17.png" alt="w17"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_18.png" alt="w18"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_19.png" alt="w19"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_20.png" alt="w20"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-tag="小物"><img src="assets/work_21.png" alt="w21"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-tag="キャラ"><img src="assets/work_22.png" alt="w22"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-tag="動物"><img src="assets/work_23.png" alt="w23"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-tag="背景"><img src="assets/work_24.png" alt="w24"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="1" data-tag="キャラ"><img src="assets/work_1.png" alt="w1"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="2" data-tag="キャラ"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="3" data-tag="動物"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="4" data-tag="動物"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="5" data-tag="背景"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="6" data-tag="背景"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="7" data-tag="小物"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="8" data-tag="小物"><img src="assets/work_8.png" alt="w8"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="9" data-tag="キャラ"><img src="assets/work_9.png" alt="w9"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="10" data-tag="動物"><img src="assets/work_10.png" alt="w10"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="11" data-tag="キャラ"><img src="assets/work_11.png" alt="w11"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="12" data-tag="背景"><img src="assets/work_12.png" alt="w12"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="13" data-tag="小物"><img src="assets/work_13.png" alt="w13"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="14" data-tag="キャラ"><img src="assets/work_14.png" alt="w14"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="15" data-tag="動物"><img src="assets/work_15.png" alt="w15"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="16" data-tag="背景"><img src="assets/work_16.png" alt="w16"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="17" data-tag="小物"><img src="assets/work_17.png" alt="w17"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="18" data-tag="キャラ"><img src="assets/work_18.png" alt="w18"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="19" data-tag="動物"><img src="assets/work_19.png" alt="w19"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="20" data-tag="背景"><img src="assets/work_20.png" alt="w20"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="21" data-tag="小物"><img src="assets/work_21.png" alt="w21"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="22" data-tag="キャラ"><img src="assets/work_22.png" alt="w22"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="23" data-tag="動物"><img src="assets/work_23.png" alt="w23"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="24" data-tag="背景"><img src="assets/work_24.png" alt="w24"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
     </div>
   </section>
 
@@ -86,9 +86,9 @@
   <div class="content">
     <div class="top"><strong>作品詳細</strong><span class="close">×</span></div>
     <div class="body">
-      <img src="assets/work_1.png" style="width:100%;border-radius:8px;border:1px solid #eee">
+      <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
       <p class="small">ダウンロードは制限されています。限定公開リンクを発行してください。</p>
-      <div style="display:flex;gap:10px">
+      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px">
         <a class="btn" href="#" id="shareBtn">限定公開リンクを生成</a>
         <a class="btn" href="#">限定公開リンク</a>
         <a class="btn primary" href="#">依頼する</a>
