--- a/work.html
+++ b/work.html
@@ -1,83 +1,1 @@
-
-<!doctype html><html lang="ja"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — 作品ページ</title>
-<meta name="robots" content="index,follow,noai,noimageai">
-<link rel="stylesheet" href="styles.css">
-</head><body oncontextmenu="return false;">
-<header class="header">
-  <div class="container inner">
-    <div class="brand"><div class="logo"></div><strong>Safolio</strong><span class="small">Work</span></div>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
-      <a href="portfolio.html">ポートフォリオ</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">お問い合わせ</a>
-    </nav>
-  </div>
-</header>
-<main class="container">
-  <section class="card" style="max-width:980px;margin:0 auto">
-    <h3 style="margin-top:0">作品</h3>
-    <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
-    <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
-      <button class="btn" id="wmToggle" type="button">透かしON</button>
-      <a class="btn" id="shareBtn" href="#">限定公開リンクを生成</a>
-      <a class="btn primary" href="contact.html">依頼する</a>
-      <a class="btn" href="portfolio.html">一覧へ戻る</a>
-    </div>
-    <p class="small" id="status"></p>
-  </section>
-</main>
-<footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
-<script>
-// Parse id
-const params = new URLSearchParams(location.search);
-const workId = parseInt(params.get('id')||'1',10);
-let wmOn = false;
-function loadCanvasWithWatermark(src, text='© Do Not Train | Safolio', enabled=false){
-  const canvas = document.getElementById('wmCanvas');
-  const ctx = canvas.getContext('2d');
-  const img = new Image();
-  img.onload = () => {
-    const maxW = canvas.clientWidth || 900;
-    const ratio = img.height / img.width;
-    const w = maxW;
-    const h = Math.round(w * ratio);
-    canvas.width = w; canvas.height = h;
-    ctx.drawImage(img, 0, 0, w, h);
-    if(enabled){
-      ctx.globalAlpha = 0.25;
-      ctx.font = Math.floor(w*0.035) + 'px sans-serif';
-      ctx.fillStyle = '#2B4B7C';
-      ctx.textAlign = 'right';
-      ctx.textBaseline = 'bottom';
-      const pad = Math.floor(w*0.02);
-      ctx.fillText(text, w - pad, h - pad);
-      ctx.globalAlpha = 1.0;
-    }
-  };
-  img.src = src;
-}
-document.addEventListener('DOMContentLoaded', ()=>{
-  const imgURL = 'assets/work_' + workId + '.png';
-  loadCanvasWithWatermark(imgURL, undefined, wmOn);
-  const wmBtn = document.getElementById('wmToggle');
-  wmBtn.addEventListener('click', ()=>{
-    wmOn = !wmOn;
-    wmBtn.textContent = wmOn ? '透かしOFF' : '透かしON';
-    loadCanvasWithWatermark(imgURL, undefined, wmOn);
-  });
-  document.getElementById('shareBtn').addEventListener('click', (e)=>{
-    e.preventDefault();
-    const exp = Date.now() + 6*60*60*1000;
-    const payload = { exp, v: 2, workId };
-    const b64 = btoa(JSON.stringify(payload));
-    const base = location.origin + location.pathname.replace(/\/work\.html$/, '/');
-    const url = base + 'protected.html?t=' + encodeURIComponent(b64);
-    navigator.clipboard?.writeText(url);
-    document.getElementById('status').textContent = '限定公開リンクをコピーしました（6時間有効）: ' + url;
-  });
-});
-</script>
-</body></html>
+// placeholder for work.html
