--- a/index.html
+++ b/index.html
@@ -1,50 +1,17 @@
 
-<!doctype html><html lang="ja">\1
-<meta name="robots" content="index,follow,noai,noimageai">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="icon" href="data:,">
-
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — AI学習から守るイラストポートフォリオ</title>
-<link rel="stylesheet" href="styles.css">
-</head><body>
-<header class="header">
-  <div class="container inner">
-    <div class="brand">
-      <div class="logo"></div>
-      <strong>Safolio</strong><span class="small">AI学習防止ポートフォリオ</span>
-    </div>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
-      <a href="process.html">加工</a>
-      <a href="portfolio.html">ポートフォリオ</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">お問い合わせ</a>
-    </nav>
-    <div>
-      <a class="btn primary" href="portfolio.html">ポートフォリオを見る</a>
-    </div>
+<!doctype html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Safolio — AI学習から守るイラストポートフォリオ</title><meta name="robots" content="index,follow,noai,noimageai"><link rel="stylesheet" href="styles.css"></head><body>
+<header class="header"><div class="container inner">
+  <div class="brand"><div class="logo"></div><strong>Safolio</strong><span class="small">AI学習防止ポートフォリオ</span></div>
+  <nav class="nav"><a href="index.html">ホーム</a><a href="portfolio.html">ポートフォリオ</a><a href="faq.html">FAQ</a><a href="contact.html">お問い合わせ</a></nav>
+  <div><a class="btn primary" href="portfolio.html">ポートフォリオを見る</a></div>
+</div></header>
+<main class="container"><section class="hero">
+  <div><h1>Safolio（サフォリオ）<br>AI学習から守るイラストポートフォリオ</h1>
+    <p class="small">あなたのイラストを無断AI学習から守る理念を持つポートフォリオサービスです。</p>
+    <div style="display:flex; gap:12px; margin-top:14px;"><a class="btn primary" href="portfolio.html">ポートフォリオを見る</a><a class="btn ghost" href="faq.html">理念とFAQ</a></div>
   </div>
-</header>
-
-<main class="container">
-  <section class="hero">
-    <div>
-      <h1>Safolio（サフォリオ）<br>AI学習から守るイラストポートフォリオ</h1>
-      <p class="small">Safolioは、あなたのイラストを無断AI学習から守る理念を持ったポートフォリオ公開サービスです。</p>
-      <div style="display:flex; gap:12px; margin-top:14px;">
-        <a class="btn primary" href="portfolio.html">ポートフォリオを見る</a>
-        <a class="btn ghost" href="faq.html">理念とFAQ</a>
-      </div>
-    </div>
-    <div class="card">
-      <img class="preview-img" src="assets/preview_processed_medium.png" alt="hero">
-    </div>
-  </section>
-</main>
-
-<footer class="footer">
-  <div class="container">© 2025 Safolio. All Rights Reserved.</div>
-</footer>
-<script src="script.js"></script>
-</body></html>
+  <div class="card"><img class="preview-img" src="assets/preview_processed_medium.png" alt="hero"></div>
+</section></main>
+<footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
+<script src="script.js"></script></body></html>
