--- a/portfolio.html
+++ b/portfolio.html
@@ -1,48 +1,15 @@
 
-<!doctype html><html lang="ja">\1
-<meta name="robots" content="index,follow,noai,noimageai">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="icon" href="data:,">
-
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — ポートフォリオ</title>
-<link rel="stylesheet" href="styles.css">
-</head><body oncontextmenu="return false;">
-
-<header class="header">
-  <div class="container inner">
-    <div class="brand">
-      <div class="logo"></div>
-      <strong>Safolio</strong><span class="small">AI学習防止ポートフォリオ</span>
-    </div>
-    <nav class="nav">
-      <a href="index.html">ホーム</a>
-      <a href="process.html">加工</a>
-      <a href="portfolio.html">ポートフォリオ</a>
-      <a href="faq.html">FAQ</a>
-      <a href="contact.html">お問い合わせ</a>
-    </nav>
-    <div>
-      <a class="btn ghost" href="process.html">デモを見る</a>
-      <a class="btn primary" href="process.html">無料で始める</a>
-    </div>
-  </div>
-</header>
-
+<!doctype html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Safolio — ポートフォリオ</title><meta name="robots" content="index,follow,noai,noimageai"><link rel="stylesheet" href="styles.css"></head>
+<body oncontextmenu="return false;"><header class="header"><div class="container inner">
+  <div class="brand"><div class="logo"></div><strong>Safolio</strong><span class="small">Portfolio</span></div>
+  <nav class="nav"><a href="index.html">ホーム</a><a href="portfolio.html">ポートフォリオ</a><a href="faq.html">FAQ</a><a href="contact.html">お問い合わせ</a></nav>
+</div></header>
 <main class="container">
   <section class="card" style="display:flex;align-items:center;justify-content:space-between;gap:20px">
-    <div>
-      <h2 style="margin:0">山田 花子</h2>
-      <p class="small">イラストレーター / 依頼受付中</p>
-    </div>
-    <div style="display:flex; gap:10px">
-      <a class="btn primary" href="#">依頼する</a>
-      <span class="pill">学習防止 ON</span>
-    </div>
+    <div><h2 style="margin:0">山田 花子</h2><p class="small">イラストレーター / 依頼受付中</p></div>
+    <div style="display:flex; gap:10px"><a class="btn primary" href="inquiry.html">依頼する</a><span class="pill">学習防止 ON</span></div>
   </section>
-
-  
-
   <section style="margin-top:18px">
     <div class="card" style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
       <strong>タグ:</strong>
@@ -54,55 +21,41 @@
     </div>
     <div class="gallery" id="gallery" ondragstart="return false;">
       <div class="tile" data-id="1" data-tag="キャラ"><img src="assets/work_1.png" alt="w1"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="2" data-tag="キャラ"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="3" data-tag="動物"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="4" data-tag="動物"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="5" data-tag="背景"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="6" data-tag="背景"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="7" data-tag="小物"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="2" data-tag="動物"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="3" data-tag="背景"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="4" data-tag="小物"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="5" data-tag="キャラ"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="6" data-tag="動物"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="7" data-tag="背景"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
       <div class="tile" data-id="8" data-tag="小物"><img src="assets/work_8.png" alt="w8"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
       <div class="tile" data-id="9" data-tag="キャラ"><img src="assets/work_9.png" alt="w9"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
       <div class="tile" data-id="10" data-tag="動物"><img src="assets/work_10.png" alt="w10"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="11" data-tag="キャラ"><img src="assets/work_11.png" alt="w11"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="12" data-tag="背景"><img src="assets/work_12.png" alt="w12"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="13" data-tag="小物"><img src="assets/work_13.png" alt="w13"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="14" data-tag="キャラ"><img src="assets/work_14.png" alt="w14"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="15" data-tag="動物"><img src="assets/work_15.png" alt="w15"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="16" data-tag="背景"><img src="assets/work_16.png" alt="w16"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="17" data-tag="小物"><img src="assets/work_17.png" alt="w17"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="18" data-tag="キャラ"><img src="assets/work_18.png" alt="w18"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="19" data-tag="動物"><img src="assets/work_19.png" alt="w19"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="20" data-tag="背景"><img src="assets/work_20.png" alt="w20"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="21" data-tag="小物"><img src="assets/work_21.png" alt="w21"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="22" data-tag="キャラ"><img src="assets/work_22.png" alt="w22"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="23" data-tag="動物"><img src="assets/work_23.png" alt="w23"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="24" data-tag="背景"><img src="assets/work_24.png" alt="w24"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="11" data-tag="背景"><img src="assets/work_11.png" alt="w11"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="12" data-tag="小物"><img src="assets/work_12.png" alt="w12"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="13" data-tag="キャラ"><img src="assets/work_13.png" alt="w13"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="14" data-tag="動物"><img src="assets/work_14.png" alt="w14"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="15" data-tag="背景"><img src="assets/work_15.png" alt="w15"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="16" data-tag="小物"><img src="assets/work_16.png" alt="w16"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="17" data-tag="キャラ"><img src="assets/work_17.png" alt="w17"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="18" data-tag="動物"><img src="assets/work_18.png" alt="w18"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="19" data-tag="背景"><img src="assets/work_19.png" alt="w19"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="20" data-tag="小物"><img src="assets/work_20.png" alt="w20"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
+      <div class="tile" data-id="21" data-tag="キャラ"><img src="assets/work_21.png" alt="w21"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
+      <div class="tile" data-id="22" data-tag="動物"><img src="assets/work_22.png" alt="w22"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
+      <div class="tile" data-id="23" data-tag="背景"><img src="assets/work_23.png" alt="w23"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
+      <div class="tile" data-id="24" data-tag="小物"><img src="assets/work_24.png" alt="w24"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
     </div>
   </section>
-
 </main>
-
-<div id="modal" class="modal">
-  <div class="content">
-    <div class="top"><strong>作品詳細</strong><span class="close">×</span></div>
-    <div class="body">
-      <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
-      <p class="small">ダウンロードは制限されています。限定公開リンクを発行してください。</p>
-      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px">
-        <a class="btn" href="#" id="shareBtn">限定公開リンクを生成</a>
-        <a class="btn" href="#">限定公開リンク</a>
-        <a class="btn primary" href="#">依頼する</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<footer class="footer">
-  <div class="container">
-    © 2025 Safolio — 学習防止加工 / 利用規約 / プライバシー
-  </div>
-</footer>
-
+<div id="modal" class="modal"><div class="content">
+  <div class="top"><strong>作品詳細</strong><span class="close">×</span></div>
+  <div class="body"><p class="small">ダウンロードは制限されています。</p></div>
+</div></div>
+<footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
 <script src="script.js"></script>
-</body></html>
+<script>
+function applyFilter(tag){ document.querySelectorAll('#gallery .tile').forEach(function(el){ el.style.display=(tag==='all'||el.getAttribute('data-tag')===tag)?'':'none'; }); }
+document.querySelectorAll('button[data-filter]').forEach(function(btn){ btn.addEventListener('click', function(){ applyFilter(btn.getAttribute('data-filter')); }); });
+document.querySelector('.modal .close').addEventListener('click', function(){ document.getElementById('modal').style.display='none'; });
+document.getElementById('modal').addEventListener('click', function(e){ if(e.target.id==='modal') e.currentTarget.style.display='none'; });
+</script></body></html>
