--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Safolio — 作品詳細</title>
   <meta name="robots" content="index,follow,noai,noimageai">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=4">
 </head>
 <body oncontextmenu="return false;">
 <header class="header">
@@ -20,22 +20,24 @@
 </header>
 
 <main class="container">
-  <section class="card">
-    <h2 id="workTitle">作品タイトル</h2>
+  <section class="card" style="max-width:980px;margin:0 auto">
+    <h2 id="workTitle" style="margin-top:0">作品</h2>
     <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
-    <div data-controls="wm" style="display:flex;gap:10px;flex-wrap:wrap;margin:8px 0">
+
+    <div data-controls="wm" style="display:flex;gap:10px;flex-wrap:wrap;margin:12px 0">
       <button class="btn" id="wmToggle" type="button">透かしON</button>
       <a class="btn" id="shareBtn" href="#">限定公開リンクを生成</a>
-      <a class="btn" id="inquiryBtn" href="#">依頼する</a>
+      <a class="btn primary" id="inquiryBtn" href="#">依頼する</a>
       <a class="btn" id="reportBtn" href="#">不正利用を報告</a>
+      <a class="btn" href="portfolio.html">一覧へ戻る</a>
 
-      <select id="expirySel" style="padding:8px;border-radius:10px;border:1px solid #e5e7eb">
-        <option value="1">有効期限: 1h</option>
-        <option value="24" selected>有効期限: 24h</option>
-        <option value="168">有効期限: 7d</option>
+      <select id="expirySel">
+        <option value="1">1h</option>
+        <option value="24" selected>24h</option>
+        <option value="168">7d</option>
       </select>
-      <select id="wmPos" style="padding:8px;border-radius:10px;border:1px solid #e5e7eb">
-        <option value="br" selected>位置: 右下</option>
+      <select id="wmPos">
+        <option value="br" selected>右下</option>
         <option value="bl">左下</option>
         <option value="tr">右上</option>
         <option value="tl">左上</option>
@@ -45,45 +47,35 @@
       <span class="small">サイズ</span>
       <input type="range" id="wmScale" min="0.02" max="0.08" step="0.005" value="0.035" style="width:160px">
     </div>
-    <p class="small">ダウンロードは制限されています。</p>
+
+    <p class="small" id="status"></p>
   </section>
 </main>
 
 <footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
 
+<!-- 作品データ（works.js がある場合は読み込み） -->
 <script src="works.js"></script>
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const params = new URLSearchParams(location.search);
-    const id = params.get('id') || 1;
-    const work = works.find(w => w.id == id) || works[0];
-    window.currentWorkId = work.id;
-    document.getElementById('workTitle').textContent = work.title;
+  // ===== 透かし設定（ページ内で自己完結） =====
+  const WM = { alpha: 0.25, scale: 0.035, pos: 'br' };
+  let wmOn = false;
 
-    // 不正利用報告
-    document.getElementById('reportBtn').addEventListener('click', (e) => {
-      e.preventDefault();
-      const qs = new URLSearchParams({
-        subject: `[Safolio 不正利用報告] 作品ID:${work.id}`,
-        body: `作品ID:${work.id}\nURL:${location.href}`
-      });
-      location.href = `mailto:ckonsaru@gmail.com?${qs.toString()}`;
-    });
-
-    // 依頼
-    document.getElementById('inquiryBtn').href = 'inquiry.html?work=' + work.id;
-
-    // 透かし描画
+  // ===== 画像描画（透かし込み） =====
+  function drawWithWatermark(src) {
     const canvas = document.getElementById('wmCanvas');
     const ctx = canvas.getContext('2d');
     const img = new Image();
-    img.src = work.img;
+    img.crossOrigin = 'anonymous';
     img.onload = () => {
-      canvas.width = img.width;
-      canvas.height = img.height;
-      ctx.drawImage(img, 0, 0);
-    };
-  });
-</script>
-</body>
-</html>
+      const maxW = canvas.clientWidth || 900;
+      const ratio = img.height / img.width;
+      const w = maxW, h = Math.round(w * ratio);
+      canvas.width = w; canvas.height = h;
+      ctx.clearRect(0,0,w,h);
+      ctx.drawImage(img, 0, 0, w, h);
+      if (wmOn) {
+        ctx.globalAlpha = WM.alpha;
+        ctx.font = Math.floor(w * WM.scale) + 'px sans-serif';
+        ctx.fillStyle = '#2B4B7C';
+        ctx.textAlign = (WM.pos.endsWith('r') ? 'right' : 'left');
